force-app/main/default/objects/Proforma_Invoice__c/Proforma_Invoice__c.object-meta.xml
<CustomObject>
    <label>Proforma Invoice</label>
    <nameField>
        <displayFormat>INVP{00000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proforma Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>