force-app/main/default/objects/Proforma_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proforma Invoices</relationshipLabel>
    <relationshipName>Proforma_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>