force-app/main/default/objects/Proforma_Invoice__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Approved</fullName>
                <default>true</default>
                <label>Not Approved</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>