force-app/main/default/objects/Proforma_Invoice__c/fields/Current_Terms__c.field-meta.xml
<CustomField>
    <fullName>Current_Terms__c</fullName>
    <label>Current Terms</label>
    <type>Date</type>
</CustomField>