force-app/main/default/objects/Proforma_Invoice__c/fields/Day_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Day_Payment_Terms__c</fullName>
    <label>Day Payment Terms</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>