force-app/main/default/objects/Proforma_Invoice__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proforma Invoices</relationshipLabel>
    <relationshipName>Proforma_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>