force-app/main/default/objects/Proforma_Invoice__c/fields/PLISubTotal__c.field-meta.xml
<CustomField>
    <fullName>PLISubTotal__c</fullName>
    <label>PLISubTotal</label>
    <summarizedField>Proforma_Invoice_Line__c.Sub_Total__c</summarizedField>
    <summaryForeignKey>Proforma_Invoice_Line__c.Proforma_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>