force-app/main/default/objects/Proforma_Invoice__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <referenceTo>zqu__Quote__c</referenceTo>
    <relationshipLabel>Proforma Invoices</relationshipLabel>
    <relationshipName>Proforma_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>