force-app/main/default/objects/Proforma_Invoice__c/fields/Remove_Proforma_Description__c.field-meta.xml
<CustomField>
    <fullName>Remove_Proforma_Description__c</fullName>
    <description>Removes the Proforma Invoice title and use Invoice only in the Proforma Invoice PDF</description>
    <inlineHelpText>Removes the Proforma Invoice title and use Invoice only in the Proforma Invoice PDF</inlineHelpText>
    <label>Remove Proforma Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>