force-app/main/default/objects/Proforma_Invoice__c/fields/Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total__c</fullName>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>