force-app/main/default/objects/Proforma_Invoice__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Subsidiary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent Company : SimilarWeb IL</fullName>
            </value>
            <value>
                <fullName>Parent Company : SimilarWeb UK</fullName>
            </value>
            <value>
                <fullName>Parent Company : SimilarWeb Inc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>