force-app/main/default/objects/Proforma_Invoice__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <summarizedField>Proforma_Invoice_Line__c.Tax_Amount__c</summarizedField>
    <summaryForeignKey>Proforma_Invoice_Line__c.Proforma_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>