force-app/main/default/objects/Proforma_Invoice__c/fields/Tax_c__c.field-meta.xml
<CustomField>
    <fullName>Tax_c__c</fullName>
    <formula>/* uncomment next and last 2 lines to handle negatives and denote them in accounting style -1234 == (1,234.00) */
/* SUBSTITUTE(
IF(Tax__c &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; */
/* uncomment and adjust currency sign */
/* &quot;$&quot; &amp; */
IF(ABS( Tax__c ) &gt;= 1000000, TEXT(FLOOR(Tax__c / 1000000)) &amp; &quot;,&quot;, &quot;&quot;)
&amp; IF(ABS(Tax__c) &gt;= 1000, RIGHT(TEXT(FLOOR(Tax__c / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;)
&amp; RIGHT(TEXT(FLOOR(Tax__c)), 3)
/* multiplier x100 and 2 indicate number of decimal places */
&amp; &quot;.&quot; &amp; RIGHT(TEXT(ROUND(Tax__c * 100, 0)), 2)
/* &amp; IF(Tax__c &lt; 0, &quot;)&quot;, &quot;&quot;)
,&quot;-&quot;,&quot;&quot;) */

&amp;
&quot; &quot; &amp; Text ( Currency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax c</label>
    <type>Text</type>
</CustomField>