force-app/main/default/objects/Proforma_Invoice__c/fields/Upsell_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Amount__c</fullName>
    <formula>Quote__r.Upsell_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upsell Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>