force-app/main/default/objects/Proforma_Invoice__c/recordTypes/New_Subscription.recordType-meta.xml
<RecordType>
    <fullName>New_Subscription</fullName>
    <active>true</active>
    <label>New Subscription</label>
</RecordType>